# quickbites-app

./: .env.example  .gitignore  DESIGN.md  Dockerfile  README.md  audit.db  eval_results_20260426T103601Z.json  eval_results_20260426T104352Z.json  eval_results_20260426T105224Z.json  eval_results_20260426T110036Z.json  eval_results_20260426T110925Z.json  eval_results_20260426T132540Z.json  eval_results_20260426T133400Z.json  eval_results_20260426T134107Z.json  eval_results_20260426T134844Z.json  eval_results_20260426T135536Z.json  eval_results_20260426T151942Z.json  eval_results_20260426T161856Z.json  eval_results_20260426T193100Z.json  policy_index.pkl  prod_eval_results_20260426T194203Z.json  prod_eval_results_20260426T194233Z.json  pyproject.toml
agent/: abuse.py  claim_verifier.py  customer_signals.py  decision_schema.py  disclosure_filter.py  injection_filter.py  llm_client.py  orchestrator.py  policy_index.py  prefetch.py  prompts.py  session_state.py  settings.py
agent/tools/: dispatch.py  (+2 more)
audit/: redact.py  schema.sql  store.py
scripts/: build_policy_index.py  dump_transcripts.py  init_audit_db.py  run_dev_eval.py  run_eval_suite.py  run_one_scenario.py
service/: api.py  auth.py  run_registry.py  settings.py  simulator_client.py  worker.py
tests/: conftest.py  test_abuse.py  test_audit_store.py  test_claim_verifier.py  test_close_confirmation_flow.py  test_customer_signals.py  test_decision_schema.py  test_disclosure_filter.py  test_emoji_strip.py  test_injection_filter.py  test_orchestrator.py  test_prefetch.py  test_session_signals.py  test_sql_tools.py
(+39 files in other folders)
